[tool.poetry]
name = "youtube-downloader"
version = "0.1.0"
description = ""
authors = ["vsouth <neppchela@gmail.com>"]
readme = "README.md"
packages = [{include = "youtube_downloader"}]

[tool.poetry.dependencies]
python = "^3.11"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
